# GSH_Prizma_UAV_all

./: .gitignore  BUILD.md  Makefile  pyproject.toml  run_dev_verbose.sh
GSH_Prizma_CDSA_UAV-v2.0/: CHANGELOG.md  LICENSE  README.md  test_horizon.py
GSH_Prizma_CDSA_UAV-v2.0/builder-kit/: builder-kit⁄patch_tab_link_unify_help.py~  find_calc_signatures.py  find_calc_signatures_recursive.py  hotfix_tab_link_restore_full_ui.py  make_zip.sh  patch_calc_env_map.py  patch_tab_link_autohelp_SAFE.py  patch_tab_link_help_axis.py  patch_tab_link_unify_help.py
GSH_Prizma_CDSA_UAV-v2.0/builder-kit/.srcstage/: LICENSE  README.md
GSH_Prizma_CDSA_UAV-v2.0/docs/: CHANGELOG_v1.2.5_block.md
GSH_Prizma_CDSA_UAV-v2.0/examples/: profiles_demo.json
GSH_Prizma_CDSA_UAV-v2.0/examples/link/: README.txt
GSH_Prizma_CDSA_UAV-v2.0/packaging/: pack_bundle.sh  pack_rpm_system.sh  postinstall.sh
GSH_Prizma_CDSA_UAV-v2.0/scripts/: build_wheel.sh  run_dev_verbose.sh
GSH_Prizma_CDSA_UAV-v2.0/src/gsh_prizma/: cli.py
GSH_Prizma_CDSA_UAV-v2.0/templates/: run_dev_verbose.sh
builder-kit/: gsh_prizma_gui.spec  pack_deb.sh  patch_docs_radio_wording.sh  patch_docs_v1_2_5.sh  patch_tab_link_autohelp.py  patch_tab_link_xaxis_radiobuttons.py  patch_tab_link_xaxis_radiogroup_SAFE.py  smoke_test.sh  version_tag.sh
builder-kit/.srcstage/: CHANGELOG.md
docs/: README_HEADER_v1.2.5.md
examples/antenna/: README.txt
packaging/: pack_deb.sh  pack_deb_system.sh  pack_rpm.sh  prerm.sh
scripts/: check_py.sh
src/gsh_prizma/: __init__.py  cli.py.bak.2025-11-01_04-24-18
src/gsh_prizma/ui/: app.py~  (+4 more)
(+30 files in other folders)
