[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsh-prizma-cdsauav"
version = "1.2.3"
description = "GSH Prizma Gen3 CDSA UAV: Antenna Wizard Lite + Link Budget/Range (Hata, COST-231, horizon)"
readme = "README.md"
requires-python = ">=3.9"
authors = [ {name = "GSH Team"} ]
dependencies = ["PySide6>=6.6","matplotlib>=3.8"]

[project.scripts]
prizma-cdsa = "gsh_prizma.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gsh_prizma","gsh_prizma.core","gsh_prizma.solvers","gsh_prizma.io","gsh_prizma.ui"]

[tool.setuptools.package-data]
gsh_prizma = ["../data/profiles/*.json"]
